Git_WGBH_QC/src/objects/Giving_Summary__c.object
<CustomObject>
    <description>This is a custom area to identify the giving over multiple years by type i.e. Capital Campaign giving for all cumulative years; Major Gift giving for all cumulative years; membership giving, in kind, underwriting and sales.</description>
    <fields>
        <fullName>ASK1__c</fullName>
        <description>Calculated data field for Outbound Vendor files</description>
        <formula>IF(TEXT(Station__c) != &apos;WGBH&apos;, 0,
IF(LEFT(RecordTypeId, 15) != &apos;012Q00000000NJg&apos;, 0,
IF(current_mem_yr_renew_amt__c &lt;= 39.99, 50, 
IF(current_mem_yr_renew_amt__c &lt;= 49.99, 60, 
IF(current_mem_yr_renew_amt__c &lt;= 50.99, 75, 
IF(current_mem_yr_renew_amt__c &lt;= 99.99, 100, 
IF(current_mem_yr_renew_amt__c &lt;= 149.99, 150, 
IF(current_mem_yr_renew_amt__c &lt;= 179.99, 200, 
IF(current_mem_yr_renew_amt__c &lt;= 249.99, 250, 
IF(current_mem_yr_renew_amt__c &lt;= 299.99, 300, 
IF(current_mem_yr_renew_amt__c &lt;= 364.99, 365, 
IF(current_mem_yr_renew_amt__c &lt;= 499.99, 500, 
ROUND((current_mem_yr_renew_amt__c * 1.25)/5, 2) )))))))))))) * 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASK1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASK2__c</fullName>
        <formula>IF(TEXT(Station__c) != &apos;WGBH&apos;, 0,
IF(LEFT(RecordTypeId, 15) != &apos;012Q00000000NJg&apos;, 0,
IF(current_mem_yr_renew_amt__c &lt;= 39.99, current_mem_yr_renew_amt__c , 
IF(current_mem_yr_renew_amt__c &lt;= 49.99, 50, 
IF(current_mem_yr_renew_amt__c &lt;= 50.99, 60, 
IF(current_mem_yr_renew_amt__c &gt; 50.99, current_mem_yr_renew_amt__c, 
ROUND((current_mem_yr_renew_amt__c * 1.25)/5, 2) )))))) * 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASK2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASK3__c</fullName>
        <formula>IF(TEXT(Station__c) != &apos;WGBH&apos;, 0, 
IF(LEFT(RecordTypeId, 15) != &apos;012Q00000000NJg&apos;, 0, 
IF(current_mem_yr_renew_amt__c &lt;= 39.99, NULL, 
IF(current_mem_yr_renew_amt__c &lt;= 49.99, current_mem_yr_renew_amt__c, 
IF(current_mem_yr_renew_amt__c &lt;= 50.99, 50, 
IF(current_mem_yr_renew_amt__c &gt; 50.99, current_mem_yr_renew_amt__c, 
ROUND((current_mem_yr_renew_amt__c * 1.25)/5, 2) )))))) * 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASK3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Household or Organization tied to the Giving Summary.</description>
        <inlineHelpText>Household or Organization tied to the Giving Summary.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Giving Summaries (Account)</relationshipLabel>
        <relationshipName>Account_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addgift_Count__c</fullName>
        <description>The number of Addgifts on this account for this giving summary.</description>
        <label>Total Addgift Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Archived_Giving_Amount__c</fullName>
        <inlineHelpText>Tracks Giving Amount for Giving records not loaded into roundCause</inlineHelpText>
        <label>Archived Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Archived_Payment_Amount__c</fullName>
        <inlineHelpText>Tracks Payment Amount for Giving records not loaded into roundCause</inlineHelpText>
        <label>Archived Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseGivingDate__c</fullName>
        <label>BaseGivingDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BaseTotalGivingAmount__c</fullName>
        <label>BaseTotalGivingAmount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseTotalPaidAmount__c</fullName>
        <label>BaseTotalPaidAmount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Addgift_Count__c</fullName>
        <label>Base Addgift Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_First_Gift_Amount__c</fullName>
        <label>Base First Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_First_Gift_Date__c</fullName>
        <label>Base First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_First_Gift_Source__c</fullName>
        <label>Base First Gift Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Renewal_Count__c</fullName>
        <label>Base Renewal Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYears__c</fullName>
        <label>FiscalYears</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <description>Contains latest gift type.</description>
        <label>Gift Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GivingIds__c</fullName>
        <description>Contains Opportunity ids for which summary is created.</description>
        <label>GivingIds</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Giving_Level__c</fullName>
        <label>Giving Level</label>
        <picklist>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grace_Date__c</fullName>
        <label>Grace Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>History_Date_Time__c</fullName>
        <label>History Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGrace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGrace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lapsed_Date__c</fullName>
        <label>Lapsed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lapsed_Period__c</fullName>
        <label>Lapsed Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Largest_Giving_Source__c</fullName>
        <description>TA: largest_source</description>
        <inlineHelpText>The Campaign Name of the largest donation to this Giving Summary.</inlineHelpText>
        <label>Largest Giving Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Year__c</fullName>
        <label>Member Year</label>
        <picklist>
            <picklistValues>
                <fullName>Current Year</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Yr_Status__c</fullName>
        <label>Member Yr Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Months_to_Expire__c</fullName>
        <description>A numerical representation of where the giving summary is in regards to there expiration date.  For instance, if it is November and the donor expires in December, the value would be 1.  If the donor expires in January, the value would be -1.</description>
        <formula>(year(expiration_date__c)*12 +month(expiration_date__c)) - (year(today())*12 +month(today()))</formula>
        <inlineHelpText>A numerical representation of where the giving summary is in regards to there expiration date.  For instance, if it is November and the donor expires in December, the value would be 1.  If the donor expires in January, the value would be -1.</inlineHelpText>
        <label>Months to Expire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Giving_Amount__c</fullName>
        <description>TA: last_amt</description>
        <inlineHelpText>The most recent pledge amount for this Giving Summary.</inlineHelpText>
        <label>Most Recent Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Giving_Date__c</fullName>
        <description>TA: last_date</description>
        <inlineHelpText>The most recent pledge date for this Giving Summary.</inlineHelpText>
        <label>Most Recent Giving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Giving_Source__c</fullName>
        <description>TA: last_source</description>
        <inlineHelpText>The most recent Campaign Name on pledge for this Giving Summary.</inlineHelpText>
        <label>Most Recent Giving Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Payment_Date__c</fullName>
        <description>TA: last_pd</description>
        <inlineHelpText>The date of the most recent payment on a gift to this Giving Summary.</inlineHelpText>
        <label>Most Recent Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Count__c</fullName>
        <description>The number of renewals on this account for the giving summary</description>
        <label>Renewal Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shopper_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Shopper count indicating the number of additional gifts to On-air or Web sources with premiums.</description>
        <inlineHelpText>Count indicating the number of additional gifts to On-air or Web sources with premiums.  Once this is &gt;= 3, the shopper flag will be checked for that member year on that Giving Summary.</inlineHelpText>
        <label>Shopper Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shopper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shopper flag indicating more than 3 additional gifts to On-air or Web sources with premiums.</description>
        <inlineHelpText>Flag indicating a donor gives more than 3 additional gifts to Annual On-air or Web sources with premiums.</inlineHelpText>
        <label>Shopper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solicitation_Cycle1__c</fullName>
        <label>Solicitation Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Gifts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <description>Drived from the TA activity_type.  H = WGBH, Y = WGBY, I = WCAI and M = Academy of Music.</description>
        <inlineHelpText>The station of the Giving Summaries displayed.</inlineHelpText>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_Count__c</fullName>
        <label>Summary Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaAccount_Activities_Id__c</fullName>
        <description>TA Account_Activities external Id</description>
        <label>TA Account_Activities Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Member_Yr_Amount__c</fullName>
        <formula>current_mem_yr_renew_amt__c + current_mem_yr_add_amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Member Yr Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Years_Since_First_Gift__c</fullName>
        <description>Number of years since first gift to Station/Giving Summary.</description>
        <inlineHelpText>Number of years since donor&apos;s first gift to Station/Giving Summary.</inlineHelpText>
        <label>Years Since First Gift</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_Since_Previous_Gift__c</fullName>
        <description>Current year giving summary start date year - previous year giving summary start date, in years</description>
        <inlineHelpText>Number of years between current renewal and previous renewal donation by donor to this Giving Summary.</inlineHelpText>
        <label>Years Since Previous Gift</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>account_manager__c</fullName>
        <description>Account Manager</description>
        <inlineHelpText>Account Manager</inlineHelpText>
        <label>Account Manager</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acquired_date__c</fullName>
        <description>Acquired Date</description>
        <inlineHelpText>Date the prospect, new donor was added to Salesforce</inlineHelpText>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>current_activity__c</fullName>
        <description>convert HAD to RLS, HAQ to Leadership, HAI to Mid Level, HAM to Membership</description>
        <label>Giving Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_fis_yr_amt__c</fullName>
        <description>TA: current_fis_yr_amt</description>
        <inlineHelpText>The Current Fiscal Year Pledge Amount for this Giving Summary.</inlineHelpText>
        <label>Current FY Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_fis_yr_pd__c</fullName>
        <description>TA: current_fis_yr_pd</description>
        <inlineHelpText>The Current Fiscal Year Paid Amount for this Giving Summary.</inlineHelpText>
        <label>Current FY Paid Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_add_amt__c</fullName>
        <description>TA: current_mem_yr_add_amt</description>
        <inlineHelpText>The total addgift amount in the donor&apos;s member year for this Giving Summary.</inlineHelpText>
        <label>Member Yr Addgift Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_amt__c</fullName>
        <description>Current Mem Yr Amt</description>
        <inlineHelpText>Current Mem Yr Amt</inlineHelpText>
        <label>Current Member Year Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_pd__c</fullName>
        <description>Current Mem Yr Pd</description>
        <inlineHelpText>Current Mem Yr Pd</inlineHelpText>
        <label>Current Mem Yr Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_renew_amt__c</fullName>
        <description>TA: current_mem_yr_renew_amt</description>
        <inlineHelpText>The renewal amount in the donor&apos;s member year for this Giving Summary.</inlineHelpText>
        <label>Member Yr Renew Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_renew_date__c</fullName>
        <description>TA: current_mem_yr_renew_date</description>
        <inlineHelpText>The donor&apos;s member year renewal date for this Giving Summary.</inlineHelpText>
        <label>Member Yr Renew Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_renew_source__c</fullName>
        <label>Current Mem Yr Renew Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_period_amt__c</fullName>
        <description>Current Period Amt</description>
        <inlineHelpText>Current Period Amt</inlineHelpText>
        <label>Current Period Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>expiration_date__c</fullName>
        <description>Expiration Date: TA expiration_date</description>
        <inlineHelpText>Expiration Date of Membership Year for this Giving Summary.  The field can be edited to change a donor&apos;s expiration date for that Giving Summary.  The format should be MM/01/YYYY and is good through the end of that month.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>first_amt__c</fullName>
        <description>First Pledge Amount: TA first_amt</description>
        <inlineHelpText>First donation amount to this Giving Summary.</inlineHelpText>
        <label>First Gift Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>first_date__c</fullName>
        <description>TA: first_date</description>
        <inlineHelpText>Date of first donation to this Giving Summary</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>first_pd__c</fullName>
        <description>First Pd</description>
        <inlineHelpText>First Pd</inlineHelpText>
        <label>First Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>first_source__c</fullName>
        <description>TA: first_source</description>
        <inlineHelpText>Source of first donation to this Giving Summary</inlineHelpText>
        <label>First Gift Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>giving_level_amt__c</fullName>
        <description>Giving Level Amt</description>
        <inlineHelpText>Giving Level Amount means Membership Year Total Giving</inlineHelpText>
        <label>Giving Level Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>largest_date__c</fullName>
        <description>TA: largest_date</description>
        <inlineHelpText>The date of the largest donation to this Giving Summary.</inlineHelpText>
        <label>Largest Giving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>largest_pd__c</fullName>
        <description>Largest Pd</description>
        <inlineHelpText>Largest Pd</inlineHelpText>
        <label>Largest Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>largest_recent_amt__c</fullName>
        <description>TA: largest_amt</description>
        <inlineHelpText>The largest amount pledged to this Giving Summary.</inlineHelpText>
        <label>Largest Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>largest_recent_pd__c</fullName>
        <description>Largest Recent Pd</description>
        <inlineHelpText>Largest Recent Pd</inlineHelpText>
        <label>Largest Recent Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_add_amt__c</fullName>
        <description>Last Add Amt</description>
        <inlineHelpText>Last Add Amt</inlineHelpText>
        <label>Last Add Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_amt__c</fullName>
        <description>Last Amt</description>
        <inlineHelpText>Last Amt</inlineHelpText>
        <label>Last Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_date__c</fullName>
        <description>Last Date</description>
        <inlineHelpText>Last Date</inlineHelpText>
        <label>Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>last_fis_yr_amt__c</fullName>
        <description>TA: last_fis_yr_amt</description>
        <inlineHelpText>The Previous Fiscal Year Pledge Amount for this Giving Summary.</inlineHelpText>
        <label>Previous FY Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_fis_yr_cnt__c</fullName>
        <description>Last Fis Yr Cnt</description>
        <inlineHelpText>Last Fis Yr Cnt</inlineHelpText>
        <label>Last Fis Yr Cnt</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_fis_yr_pd__c</fullName>
        <description>TA: last_fis_yr_pd</description>
        <inlineHelpText>Previous Fiscal Year Pledge Amount for this Giving Summary.</inlineHelpText>
        <label>Previous FY Paid Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_mem_yr_add_amt__c</fullName>
        <description>Last Mem Yr Add Amt</description>
        <inlineHelpText>Last Mem Yr Add Amt</inlineHelpText>
        <label>Previous Member Year Addgift Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_mem_yr_amt__c</fullName>
        <description>Last Mem Yr Amt</description>
        <inlineHelpText>Last Mem Yr Amt</inlineHelpText>
        <label>Previous Member Year Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_mem_yr_pd__c</fullName>
        <description>Last Mem Yr Pd</description>
        <inlineHelpText>Last Mem Yr Pd</inlineHelpText>
        <label>Previous Member Year Paid</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_mem_yr_renew_amt__c</fullName>
        <description>Last Mem Yr Renew Amt</description>
        <inlineHelpText>Last Mem Yr Renew Amt</inlineHelpText>
        <label>Previous Member Year Renew Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_mem_yr_renew_date__c</fullName>
        <description>Last Mem Yr Renew Date</description>
        <inlineHelpText>Last Mem Yr Renew Date</inlineHelpText>
        <label>Previous Member Year Renew Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>last_mem_yr_renew_source__c</fullName>
        <label>Previous Member Year Renew Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_pd__c</fullName>
        <description>Last Pd</description>
        <inlineHelpText>Last Pd</inlineHelpText>
        <label>Last Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lock_activity__c</fullName>
        <description>Lock Activity</description>
        <inlineHelpText>Lock Activity</inlineHelpText>
        <label>Lock Activity</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prior_giving_level_amt__c</fullName>
        <description>Prior Giving Level Amt</description>
        <inlineHelpText>Prior Giving Level Amt</inlineHelpText>
        <label>Previous Giving Level Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>prospect_source__c</fullName>
        <inlineHelpText>Acquired Marketing Source, Donor Acquired From</inlineHelpText>
        <label>Acquired Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>second_fis_yr_amt__c</fullName>
        <description>Second Fis Yr Amt</description>
        <inlineHelpText>Second Fis Yr Amt</inlineHelpText>
        <label>Second Fis Yr Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>second_fis_yr_cnt__c</fullName>
        <description>Second Fis Yr Cnt</description>
        <inlineHelpText>Second Fis Yr Cnt</inlineHelpText>
        <label>Second Fis Yr Cnt</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>second_fis_yr_pd__c</fullName>
        <description>Second Fis Yr Pd</description>
        <inlineHelpText>Second Fis Yr Pd</inlineHelpText>
        <label>Second Fis Yr Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>second_mem_yr_amt__c</fullName>
        <description>Second Mem Yr Amt</description>
        <inlineHelpText>Second Mem Yr Amt</inlineHelpText>
        <label>Second Mem Yr Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>second_mem_yr_pd__c</fullName>
        <description>Second Mem Yr Pd</description>
        <inlineHelpText>Second Mem Yr Pd</inlineHelpText>
        <label>Second Mem Yr Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>second_mem_yr_renew_amt__c</fullName>
        <description>Second Mem Yr Renew Amt</description>
        <inlineHelpText>Second Mem Yr Renew Amt</inlineHelpText>
        <label>Second Mem Yr Renew Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>second_mem_yr_renew_date__c</fullName>
        <description>Second Mem Yr Renew Date</description>
        <inlineHelpText>Second Mem Yr Renew Date</inlineHelpText>
        <label>Second Mem Yr Renew Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>second_mem_yr_renew_source__c</fullName>
        <label>Second Mem Yr Renew Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>solicitation_cycle__c</fullName>
        <description>Solicitation Cycle</description>
        <inlineHelpText>Solicitation Cycle</inlineHelpText>
        <label>Solicitation Cycle</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <description>TA: start_date</description>
        <inlineHelpText>The start date of the donor&apos;s membership year for this Giving Summary.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>station_support__c</fullName>
        <description>Station Support</description>
        <inlineHelpText>Station Support</inlineHelpText>
        <label>Station Support</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sts__c</fullName>
        <inlineHelpText>Status of the Annual Membership (active, grace, lapsed, old lapsed, planned giving, deceased, inactive)</inlineHelpText>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>third_fis_yr_amt__c</fullName>
        <description>Third Fis Yr Amt</description>
        <inlineHelpText>Third Fis Yr Amt</inlineHelpText>
        <label>Third Fis Yr Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>third_fis_yr_cnt__c</fullName>
        <description>Third Fis Yr Cnt</description>
        <inlineHelpText>Third Fis Yr Cnt</inlineHelpText>
        <label>Third Fis Yr Cnt</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>third_fis_yr_pd__c</fullName>
        <description>Third Fis Yr Pd</description>
        <inlineHelpText>Third Fis Yr Pd</inlineHelpText>
        <label>Third Fis Yr Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>